--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/build",
-  "installCommand": "npm install --prefix client"
+  "buildCommand": "cd client && npm ci && npm run build",
+  "outputDirectory": "client/build"
 }
