Added Instagram Page Link and Disabled Video Feature

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ FRONTEND_URL=https://asciier.vercel.app
 # Frontend (Vercel) Environment Variables
 # Set in Vercel Dashboard under Settings > Environment Variables
 # REACT_APP_API_URL=https://your-backend.onrender.com
+# REACT_APP_ENABLE_VIDEO_MODE=false
