--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,3 @@
 # Replace with your actual Render backend URL after deployment
 REACT_APP_API_URL=https://your-backend.onrender.com
+REACT_APP_ENABLE_VIDEO_MODE=false
